enabled the intent "GUILD_MESSAGES" by default